
public static class Constants
{
    public const string ANIM_ATTACK = "attack";
    public const string ANIM_HIDDEN = "hidden";
    public const string ANIM_EXPLODE = "explode";
    public const string ANIM_CHEW = "chew";
    public const string ANIM_IDLE = "idle";
    public const string ANIM_FIRE = "fire";
    public const string ANIM_DEAD = "die";
    public const string ANIM_MOVE = "move";
}
